force-app/main/default/objects/AIPrompt__c/AIPrompt__c.object-meta.xml
<CustomObject>
    <description>This object stores and manages AI prompts used in Apex classes that invoke AI services. It allows dynamic retrieval of prompts based on use case, ensuring flexibility and maintainability in AI-driven processes. The object helps standardize prompt management, track usage history, and enable easy updates for AI interactions in Salesforce.</description>
    <label>AI Prompt</label>
    <nameField>
        <label>AI Prompt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Prompts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>