force-app/main/default/objects/AIPrompt__c/fields/DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>DeveloperName__c</fullName>
    <description>User friendly name to retrieve the prompt from Apex</description>
    <label>Developer Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>