force-app/main/default/objects/AIPrompt__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>Available models</description>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>gpt-4o-mini</fullName>
            </value>
            <value>
                <fullName>gpt-4o</fullName>
            </value>
            <value>
                <fullName>gpt-3.5-turbo</fullName>
            </value>
            <value>
                <fullName>gpt-4-turbo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>