force-app/main/default/objects/AIPrompt__c/fields/SystemRole__c.field-meta.xml
<CustomField>
    <fullName>SystemRole__c</fullName>
    <description>System role prompt</description>
    <label>System Role</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>