force-app/main/default/objects/AIPrompt__c/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <defaultValue>0.5</defaultValue>
    <inlineHelpText>Precision of the response from 0.1 to 0.9</inlineHelpText>
    <label>Temperature</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>