force-app/main/default/objects/AIPrompt__c/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>TImeout in milliseconds for the request (0 to use the default)</inlineHelpText>
    <label>Timeout (ms)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>