force-app/main/default/objects/AIPrompt__c/fields/UserRole__c.field-meta.xml
<CustomField>
    <fullName>UserRole__c</fullName>
    <description>User role prompt</description>
    <label>User Role</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>