force-app/main/default/objects/AIPrompt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>DeveloperName__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Model__c</columns>
    <columns>Temperature__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>